# semantic-finance-etl

./: .gitattributes  .gitignore  .versionrc.js  CHANGELOG.md  MANIFEST.in  PROJECT_ROADMAP.md  README.md  main.py  package.json  pyproject.toml
docs/: folder_representation.md  roadmap.md
src/core/: db_manager.py
src/semantic_finance_etl/: __init__.py
src/semantic_finance_etl/config/loaders/: project_loader.py  yaml_loader.py
src/semantic_finance_etl/config/models/: project_config.py  runtime_config.py  semantic_config.py  source_config.py  table_config.py  transform_config.py
src/semantic_finance_etl/config/services/: config_validation_service.py  project_config_service.py
src/semantic_finance_etl/contracts/: hook.py  source_discoverer.py  source_grouper.py  source_reader.py  source_selector.py
src/semantic_finance_etl/domain/enums/: fail_behavior.py  hook_stage.py  load_mode.py  table_kind.py
src/semantic_finance_etl/domain/models/: data_schema.py  frame_contracts.py  hook_payloads.py  hook_results.py  runtime_table_definition.py
src/semantic_finance_etl/etl/dlq/: __init__.py  dlq_service.py
src/semantic_finance_etl/etl/hooks/: builtin_hooks.py  hook_binding_resolver.py  hook_context_factory.py  hook_runner.py
src/semantic_finance_etl/etl/lineage/: __init__.py  lineage_service.py
src/semantic_finance_etl/etl/loading/: load_service.py
src/semantic_finance_etl/etl/orchestration/: dag_builder.py  pipeline_executor.py
src/semantic_finance_etl/etl/tracking/: __init__.py  run_tracking_service.py
src/semantic_finance_etl/etl/validation/: validation_service.py
src/semantic_finance_etl/infrastructure/database/: sqlite_writer.py
src/semantic_finance_etl/infrastructure/discovery/: filesystem_discoverer.py
src/semantic_finance_etl/infrastructure/factories/: __init__.py
src/semantic_finance_etl/infrastructure/grouping/: single_group_grouper.py
src/semantic_finance_etl/infrastructure/plugins/: hook_loader.py  local_plugin_registry.py
src/semantic_finance_etl/infrastructure/readers/: sqlite_query_reader.py
src/semantic_finance_etl/infrastructure/selection/: latest_modified_selector.py
src/semantic_finance_etl/semantic/: __init__.py  chunking_service.py  indexing_service.py  projection_service.py
src/semantic_finance_etl/tables/: configured_table_pipeline.py  derived_table_pipeline.py
src/semantic_finance_etl/utils/: logging_setup.py
tests/: conftest.py  convert.py
tests/cases/config/: test_config_service.py  test_project_config.py  test_simple_parsing.py
tests/cases/etl/: test_domain_and_validation.py  test_end_to_end_scenarios.py  test_governance_services.py  test_orchestration.py  test_pipeline.py  test_pipeline_executor.py  test_validation_and_load.py
tests/cases/hooks/: test_hooks_import.py  test_hooks_registry.py  test_hooks_resolver.py
tests/cases/semantic/: test_semantic_services.py
tests/samples/: _inspect_db.py  demo_vector_join.py
tests/samples/configs/: full_definition.yaml  project.yaml  runtime.yaml
tests/samples/configs/hooks/: __init__.py  company_transformations.py  country_transformations.py  investment_transformations.py
tests/samples/configs/semantics/: company_semantics.yaml  industry_semantics.yaml
tests/samples/configs/sources/: investment_backups.yaml
tests/samples/configs/tables/: companies.yaml  country_industry_summary.yaml  industry_stats.yaml  investment_transactions.yaml
tests/samples/output/: app.db
